2008-11-11 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: add fedora 9 detection, add
	  BuildRequires: perl(ExtUtils::Embed), fix %{dist}=unknown when
	  undetected instead of at all times

2008-11-11  Dustin J. Mitchell <dustin@zmanda.com>
	* config/macro-archive/ac_perl_module_version.m4: new macro
	* config/amanda/swig.m4: check for ExtUtils::Embed

2008-11-11  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amarchiver.pl: quote $sbindir from regexp
	  interpretation

2008-11-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Makefile.am: Don't add Amanda/Script_App.pm and Amanda/Script.pm
			    to DISTCLEANFILES.

2008-11-11  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amdump.pl: Set property "ATIME-PRESERVE" to "NO" in
				  amgtar application.

2008-11-11  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: fix.
	* amandad-src/amandad.c: Read stderr of server and report it to server.
	* server-src/planner.c: Keep first line only.

2008-11-10  Dustin J. Mitchell <dustin@zmanda.com>
	* amar-src/amarchiver.c: fix filesize printf conversion

2008-11-10  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c, client-src/selfcheck.c: Check return
							   value of pipe.

2008-11-10  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/Run.pm: change default DLEs
	* installcheck/amcheckdump.pl: add DLE explicitly
	* installcheck/amdevcheck.pl: add DLE explicitly
	* installcheck/amdump.pl: use the amgtar application in a dump

2008-11-10  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: only test amfetchdump if it was built
	* installcheck/amfetchdump.pl: use arguments in the right order

2008-11-10  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Archive.swg amar-src/amar.c amar-src/amar.h: bugfixes
	* man/Makefile.am man/xml-source/amarchiver.8.xml
	  amar-src/Makefile.am amar-src/amarchiver.c: new application