@@ -72,7 +72,7 @@ EXTRA_DIST += $(test_utils)
 
 CHECK_PERL_FLAGS=-I$(top_srcdir)/installcheck
 
-SCRIPTS_PERL = $(common_tests) $(server_tests) $(full_tests)
+SCRIPTS_PERL = $(tests)
 
 # we don't need to syntax check the test scripts..
 CHECK_PERL =
